<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:title="@string/nav_home"
        android:icon="@drawable/ic_home"/>

<!--    <item-->
<!--        android:id="@+id/notification"-->
<!--        android:title="Notifications"-->
<!--        android:icon="@android:drawable/ic_dialog_email"/>-->

    <item
        android:id="@+id/template"
        android:title="@string/nav_template"
        android:icon="@drawable/ic_template"/>

    <item
        android:id="@+id/contact"
        android:title="@string/nav_contact"
        android:icon="@drawable/ic_call"/>

    <item
        android:id="@+id/myDesign"
        android:title="@string/nav_my_design"
        android:icon="@drawable/ic_my_designs"/>

</menu>
